Added Jaxrs validation feature