@@ -30,13 +30,21 @@
               <lib>javax.ws.rs:javax.ws.rs-api:2.0.1</lib>
               <lib>org.glassfish:javax.json:1.0.4</lib>
               <lib>javax.json:javax.json-api:1.0</lib>
+              <lib>remove:geronimo-validation_1.0_spec-1.1</lib>
+              <lib>remove:bval-core-0.5</lib>
+              <lib>remove:bval-jsr303-0.5</lib>
+              <lib>javax.validation:validation-api:1.1.0.Final</lib>
+              <lib>org.hibernate:hibernate-validator:5.0.2.Final</lib>
+              <lib>org.jboss.logging:jboss-logging:3.1.0.CR1</lib>
+              <lib>com.fasterxml:classmate:1.1.0</lib>
               <lib>net.sf.gazpachoquest:gazpachoquest-jaas:${project.version}</lib>
             </libs>
+            <!-- 
             <webapps>
               <webapp>net.sf.gazpachoquest:gazpachoquest-rest-web:${project.version}?name=gazpachoquest-rest-web</webapp>
               <webapp>net.sf.gazpachoquest:gazpachoquest-questionnaires-ui:${project.version}?name=ROOT</webapp>
-            </webapps>
-            <args>-Xms512m -Xmx1024m -XX:MaxPermSize=256m -Djava.security.auth.login.config=${project.basedir}/src/main/resources/jaas.config</args>
+            </webapps>  -->
+            <args>-Xms512m -Xmx1024m -Djava.security.auth.login.config=${project.basedir}/src/main/resources/jaas.config</args>
           </configuration>
         </plugin>
       </plugins>
